[gd_scene load_steps=3 format=3 uid="uid://bh2onxymo5wnr"]

[ext_resource type="Script" path="res://audio_slider_settings.gd" id="1_h2gl5"]
[ext_resource type="AudioStream" uid="uid://corj6ph3ey7kj" path="res://Textures/Comp_sprite/JBM_Text_Grain_Loop_05.wav" id="2_e4qg3"]

[node name="audio_slider_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2gl5")
bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 42

[node name="audio_label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Master Volume"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="audio_level_label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "100
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_e4qg3")

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
